Optimize blog section responsiveness for mobile devices and fix the overflow issue of the 'Read More' button.

--- a/blogs.css
+++ b/blogs.css
@@ -26,18 +26,26 @@
   box-sizing: border-box;
   
 }
+#topBtn{
+ margin-right: -1rem;
+}
 .grid-container {
   display: grid;
   padding: 2.5rem;
   grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   grid-gap: 1rem;
+  justify-content: center; /* Center horizontally */
+  align-items: center; /* Center vertically */
+ 
+ 
   /* place-content: center; */
   /* align-items: center;
   justify-content: center; */
 }
+
 .card-img-top{
-  width: 100%;
-  height: 100%;
+  width:100%;
+  height:61%;
   object-fit: cover;
 }
 .card-body > h5{
@@ -54,26 +62,26 @@
 }
 .card-body{
   align-items: center;
-  
+ 
 }
 .card:hover{
   box-shadow: 0 12px 20px rgba(0, 0, 0, 0.24),0 17px 50px 0 rgba(0, 0, 0, 0.19);
 }
 .card-img-top:hover {
   box-shadow: 0 0.25em 0.25em -0.1em #604717;
-    box-shadow: 0 0.30em 0.30em -0.1em #f7c603;
-    border-color: #e0ef08 ;
-    transition: 0.4s;
-    color: #d8eb08 ;
+  box-shadow: 0 0.30em 0.30em -0.1em #f7c603;
+  border-color: #e0ef08 ;
+  transition: 0.4s;
+  color: #d8eb08 ;
 }
 .card:hover {
   box-shadow: 0 0.25em 0.25em -0.1em #eb9e22;
-    box-shadow: 0 0.25em 0.25em -0.1em #b5c952;
-    transform: translateY(-1.75em);
-    border-color: #FFB84C;
-    transition: 0.4s;
-    color: #fff ;
-    text-decoration:wavy;
+  box-shadow: 0 0.25em 0.25em -0.1em #b5c952;
+  transform: translateY(-1.75em);
+  border-color: #FFB84C;
+  transition: 0.4s;
+  color: #fff ;
+  text-decoration:wavy;
   
 }
 .card h5:hover {
@@ -139,3 +147,16 @@
   text-decoration: none;
   font-size: 32px;
 }
+
+@media  (max-width:375px) {
+.grid-container {
+  grid-template-columns: repeat(auto-fit, minmax(335px, 1fr));
+
+}
+}
+
+@media  (max-width:768px) {
+  #topBtn{
+    display:none;
+  }
+  }
